--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recipe-app",
-  "homepage": "https://Rohan-Shakya.github.io/Recipe-App-React",
+  "homepage": "https://Rohan-Shakya.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
